Connected with Microsoft Graph API
